[package]
name = "disguise-macros"
description.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]

[lints]
workspace = true
